# openshift-mcp-server

./: .ci-operator.yaml  .coderabbit.yaml  .dockerignore  .downstream-preserve  .gitignore  .mcpbignore  .snyk  AGENTS.md  CONTRIBUTING.md  Dockerfile  Dockerfile.ci  Dockerfile.ocp  Makefile  Makefile-ocp.mk  OPENSHIFT_AI_GUIDE.md  OWNERS  README.md  SECURITY.md  ci  go.mod  go.sum  install-openshift-ai.sh  manifest.json  renovate.json  server.json  smithery.yaml
.github/: CODEOWNERS  dependabot.yml  labeler.yaml  labeler.yml
.konflux_release/: README.md
.tekton/: kubernetes-mcp-server-ols-pull-request.yaml  kubernetes-mcp-server-ols-push.yaml  openshift-mcp-server-main-pull-request.yaml  openshift-mcp-server-main-push.yaml  openshift-mcp-server-ols-1-1-pull-request.yaml  openshift-mcp-server-ols-1-1-push.yaml  openshift-mcp-server-pull-request.yaml  openshift-mcp-server-push.yaml  openshift-mcp-server-release-001-pull-request.yaml  openshift-mcp-server-release-001-push.yaml  openshift-mcp-server-release-010-pull-request.yaml  openshift-mcp-server-release-010-push.yaml  openshift-mcp-server-release-020-pull-request.yaml  openshift-mcp-server-release-020-push.yaml  openshift-mcp-server-release-03-pull-request.yaml  openshift-mcp-server-release-03-push.yaml  openshift-mcp-server-release-pull-request.yaml  openshift-mcp-server-release-push.yaml
docs/: ACM_CLUSTER_PROVIDER.md  ENTRA_ID_SETUP.md  EXTERNAL_SECRETS.md  GETTING_STARTED_CLAUDE_CODE.md  KEYCLOAK_OIDC_SETUP.md  KIALI.md  METRICS.md  (+19 more)
test/e2e/: conftest.py  pyproject.toml  test_e2e.py  test_kuadrant_gateway.py
(+1288 files in other folders)
