[project]
name = "kubernetes-mcp-server-e2e"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "kubernetes-asyncio>=31.0,<37",
    "mcp>=1.28,<2",
    "pytest>=8.0,<9",
    "pytest-asyncio>=0.25,<1",
    "pyyaml>=6.0,<7",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "kuadrant: tests requiring Kuadrant MCP Gateway (install with 'make kuadrant-setup')",
]
